# greenlit-takehome

./: Greenlit.postman_collection.json  README.md  main.py  pyproject.toml
database/: database_config.py
models/: companies.py  films.py  users.py
