[tool.poetry]
name = "simplecrud"
version = "3.10"
description = ""
authors = ["syedkaiser9770 <syedkaiser9770@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
pydantic = "^2.6.1"
sqlalchemy = "^2.0.27"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"
httpx = "^0.26.0"
asyncpg = "^0.29.0"
email-validator = "^2.1.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
